# fts-paper

./: .gitignore  README.md  pyproject.toml
notebooks/: datasets.ipynb  eval_fidelity_metrics.ipynb  final_results.ipynb  first_stage_experiments.ipynb  synth_generation_temp.ipynb  track_experiments.ipynb
scripts/: run_inference.sh  run_tokenization.sh  run_training.sh
scripts/meds/: run_mimic.sh
scripts/meds/mimic/: pre_MEDS.py
scripts/meds/mimic/configs/: event_configs.yaml  extract_MIMIC.yaml
src/ethos/: constants.py  model.py  task_processing.py  utils.py
src/ethos/configs/: inference.yaml  synthetic.yaml  tokenization.yaml  training.yaml
src/ethos/configs/dataset/: mimic.yaml
src/ethos/datasets/: __init__.py  _sharded_data.py  base.py  mimic_icu.py
src/ethos/inference/: constants.py  inference.py  run_inference.py  utils.py
src/ethos/metrics/: __init__.py  fidelity.py  paper_fts.py  standard.py
src/ethos/synthetic/: __init__.py  dataset.py  generate_dataset.py  transforms.py
src/ethos/tokenize/: mappings.py  patterns.py  run_stage.py  run_tokenization.py  utils.py
src/ethos/tokenize/common/: __init__.py  basic.py  quantization.py  time_interval.py
src/ethos/tokenize/mimic/: __init__.py  preprocessors.py
src/ethos/train/: run_training.py
